# chatgpt-cli

./: .gitignore  .mdformat.toml  LICENSE  MANIFEST.in  README.md  README_zh.md  chat.py  chatgpt_cli.py  config.yaml.example  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
demo/: demo.md
docs/archive/: README.md
docs/demo/: demo.md
script/: chat.py  config.yaml.example
src/chatgpt_cli/: __init__.py  chat.py  conversation.py  template.py
src/input/: input.py
src/output/: color_print.py  panel.py  print.py
src/utils/: cmd.py  command.py  file.py  io.py
utils/: command.py  conversation.py  data.py  display.py
