[metadata]
name = chatgpt-cli
version = 0.1.0
author = Jerry Yang
author_email = efjerryyang@outlook.com
description = "A markdown-supported command-line interface tool that connects to ChatGPT using OpenAI's API key."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/efJerryYang/chatgpt-cli/
license = MIT

[options]
packages = find:
include_package_data = True
install_requires =
    # List of the required packages from the requirements file
    # Note: the prefix "-r" in the requirements.txt is removed when added here
    openai>=0.27.0
    pyyaml
    rich

[options.entry_points]
console_scripts =
    chatgpt-cli = chatgpt_cli:main

[options.package_data]
* = *.json, *.yaml

[options.packages.find]
exclude =
    tests*